--- a/public/landing.html
+++ b/public/landing.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jaiver Vargas | Tech Lead</title>
+    <title>Jaiver vargas: Tech Lead</title>
 </head>
 <body>
-    <div id="wrap">
-
+    <div class="wrap">
+        Hello World!
     </div>
 </body>
 </html>
