--- a/public/landing.html
+++ b/public/landing.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jaiver vargas: Tech Lead</title>
+    <title>Jarvan: Tech Lead</title>
 </head>
 <body>
     <div class="wrap">
